fix: correct indentation in category lists and ensure consistent formatting in blog markdown files

--- a/src/content/blog/my-pronouns.mdx
+++ b/src/content/blog/my-pronouns.mdx
@@ -5,7 +5,8 @@ categories:
     - 'me'
     - 'identity'
 ---
-import Audio from '~/components/Audio.astro'
+
+import Audio from '~/components/Audio.astro';
 
 ## Pronouns? Huh?
 
