--- a/src/pages/pronouns.mdx
+++ b/src/pages/pronouns.mdx
@@ -1,9 +1,7 @@
 ---
 title: 'My Pronouns'
 date: '2019-01-04'
-categories:
-    - 'me'
-    - 'identity'
+layout: '../layouts/Page.astro'
 ---
 import Audio from '~/components/Audio.astro'
 
