update pronouns page

--- a/src/pages/pronouns.mdx
+++ b/src/pages/pronouns.mdx
@@ -8,11 +8,13 @@ import Audio from '~/components/Audio.astro';
 
 ## Pronouns? Huh?
 
-This phrase means that when referring to me using [personal pronouns](https://www.oxforddictionaries.com/us/definition/american_english/personal-pronoun), you should use _xhe/xer_. For example, “Echo isn’t here, xhe’s busy fighting crime.”
+This phrase means that when referring to me using [personal pronouns](https://www.oxforddictionaries.com/us/definition/american_english/personal-pronoun) in English, you should use _xhe/xer_. For example:
 
-## Why are you telling me this?
+- Xhe is pretty cool.
+- I like xer style.
+- I need to returns xers book.
 
-Most people are uncomfortable when someone refers to them with the wrong pronoun or address, and I’m no different. Not only that, but most people are embarrassed and upset if they [misgender](https://www.oxforddictionaries.com/us/definition/american_english/misgender) someone since it’s considered rude. Since I have a unique gender that isn’t immediately obvious, it’s easier for everyone if I tell people which pronoun I prefer.
+In German, it would be cool to use _xier/xieser/xiem/xien_. For more info about using that, [click here](https://nibi.space/pronomen#xier). However I don't mind _sie/ihr_, as my own German isn't great.
 
 ## How do I pronounce xhe/xer?
 
@@ -37,6 +39,10 @@ Specifically, for _xhe/xer_, I made it up! Yes, that seems a bit odd, but it als
 Because I’m neither a woman nor a man, instead, I am [nonbinary](https://www.oxforddictionaries.com/us/definition/american_english/nonbinary). Everyone who identifies as nonbinary is different, but for me, this means I don’t have a male or female [gender identity](https://www.oxforddictionaries.com/us/definition/american_english/gender-identity).
 
 I am also not they, as those pronouns do not feel accurate to my internal sense of self. Not all non-binary people use singular they!
+
+## Why are you telling me this?
+
+Most people are uncomfortable when someone refers to them with the wrong pronoun or address, and I’m no different. Not only that, but most people are embarrassed and upset if they [misgender](https://www.oxforddictionaries.com/us/definition/american_english/misgender) someone since it’s considered rude. Since I have a unique gender that isn’t immediately obvious, it’s easier for everyone if I tell people which pronoun I prefer.
 
 ## Using xhe/xer to refer to you is difficult/confusing/annoying. Can I do something else?
 
