--- a/src/pages/pronouns.mdx
+++ b/src/pages/pronouns.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'My Pronouns'
-date: '2025-07-12'
+date: '2025-08-01'
 layout: '../layouts/Page.astro'
 ---
 
@@ -12,7 +12,8 @@ This phrase means that when referring to me using [personal pronouns](https://ww
 
 - Xhe is pretty cool.
 - I like xer style.
-- I need to returns xers book.
+- I need to return xer's book.
+- Xhe is too hard on xerself.
 
 In German, it would be cool to use _xier/xieser/xiem/xien_. For more info about using that, [click here](https://nibi.space/pronomen#xier). However I don't mind _sie/ihr_, as my own German isn't great.
 
