final blog post

--- a/src/content/blog/space-between-stars.mdx
+++ b/src/content/blog/space-between-stars.mdx
@@ -4,7 +4,15 @@ date: 2025-12-20T20:15:40.440Z
 categories:
     - larp
 contentWarning: Discussion of mental health struggles and suicide in a fictitious setting.
+coverImage: ./images/blankspace background.jpg
+coverDisable: true
 ---
+
+import Image from '~/components/Image.astro';
+import oracleCard from './images/oracle card.png';
+import wispOstinato from './images/wisp + ostinato.jpg';
+import timeCluster from './images/time cluster.png';
+import blankspace from './images/blankspace background.jpg';
 
 > I watched the blue sphere of our home world shrinking into the distance. I tried to appreciate the beauty of our home world, knowing I would never see it again.
 
@@ -48,6 +56,14 @@ Encounters with it can be terrifying: you cower and hide, trying to be as small 
 
 As you see more of the monster, it also sees more of you. It starts to whisper in your ear, telling you negative thoughts and feelings personalized for your character’s struggles. It encourages suffering and pain, pushing you towards your character giving up or doubling down on their toxic traits. Every encounter with the monster changes your character- sometimes for the better as they confront their worst traits, but also for the worst as they retreat harder into denial.
 
+<Image
+	src={oracleCard}
+	alt="A card with artwork of a childish figure on a swing inside a grandfather clock and the text Oracle."
+	title="The oracle card the monster gave me. Artwork by Lara Hartung."
+	noFilter
+	align="left"
+/>
+
 In the final act of the game, you can choose to look the monster in the eye as they come to face their worst self. If you do so, the monster gives you a card with artwork associated with your character. If your character cannot break their pattern and change for the better, you find a quiet space and tear the card in half as a representation of your character committing suicide. Notably, you are forbidden to portray the act, and only can leave the torn card and lay there till found. The point here is not to romanticise suicide, but for the sudden loss to cause ripples in your group and other connections. Even the most toxic characters have someone on the ship who cares for them and will mourn their loss.
 
 > The being whispered in my ear as I huddled in fear: “It’s not a cycle, it’s a chain. It’s strangling you. Break it. You’re not helping: you’re making things worse for everyone.” Tears streamed down my face as the terrible voice filled the newly torn hole in my heart. Maybe it’s better for me to just stop helping people. They don’t deserve me anyway.
@@ -88,6 +104,14 @@ Representing the past was Cinder, a wealthy tech CEO who decided to put herself 
 
 Ravel was the wild card, a character who perceived time outside of linear order. His journey was trying to puzzle out all the inconsistent fragments of the story of his life. He boarded the ship because the final piece of the puzzle was there, placed with Ostinato’s help: the moment of his death to the monster after being abandoned by Ostinato. Both of our characters knew this was coming, as we had roleplayed it as a vision before the game began. The character represents chaos- how the stories we tell about the past and future can never truly represent reality.
 
+<Image
+	src={wispOstinato}
+	alt="Black and white polaroid of Wisp and Ostinato."
+	title="Wisp and Ostinato"
+	noFilter
+	align="left"
+/>
+
 The last character in our group was Wisp, a tragic person that nobody was ever able to remember and my primary relationship. She moved through the world completely on her own, isolated from any meaningful emotional connection. With no real past and unable to build a future, she struggled with intense loneliness. She represented the present, as she was forced to live in the moment every day.
 
 Our characters had a romance, with Ostinato having foreseen she would be xer one true love. Being one of the few people on the ship who could even know her name, she immediately threw herself at xer and they quickly fell for each other. We had dates in the dark ship, holding hands and looking at the slowly shrinking Earth together. Fearing being forgotten again, Wisp clung on tightly. The two got matching tattoos, took photos together, and avoided talking about the future.
@@ -95,6 +119,14 @@ Our characters had a romance, with Ostinato having foreseen she would be xer one
 It was still doomed, of course.
 
 The relationship peaked with my throwing Wisp a surprise birthday party, an event she hadn’t had anyone to celebrate with in years. As Ostinato sang happy birthday xhe started to forget her name, and she got increasingly desperate. It came to a head after we were thrown in the Time Prison together by Cinder, the closeness of which erased her existence from Ostinato’s memory for good. She cried and begged me to remember, but I only said sorry over and over.
+
+<Image
+	src={timeCluster}
+	alt="Black and white polaroid of the four people in the Time cluster."
+	title="The time cluster"
+	noFilter
+	align="right"
+/>
 
 The Time cluster survived, in the end. We were drawn together as outsiders, but that wasn’t enough to hold us together by itself. All our characters hurt each other immensely, but despite that pain still managed to forgive and forged tight bonds.
 
@@ -137,3 +169,9 @@ Our real world of course is far messier and the stories of our lives more compli
 > I hold the hands of my newly forged family, and stand against the inevitability I fear. I have faced darker paths within the depths of space, and I am not going to let destiny rule me now.
 >
 > My predictions are only as real as I let them. I let my thoughts of the future go in the wind, and just appreciate the present slowly turning into the past.
+
+<Image
+	src={blankspace}
+	alt="The Oracle card from above, a card with an hourglass made of stars, the polaroid with Wisp and Ostinato, and a silver necklace with an hourglass engraving."
+	noFilter
+/>
